fix: Refactor server status check to use URI for URL conversion